# TIFF_tags

./: Cargo.toml  README.md  exiftags.txt  license.txt
src/: lib.rs  tests.rs
