[package]
name = "tiff_tags_nightly"
version = "1.1.0"
edition = "2021"
license = "MIT"
keywords = ["image", "metadata", "exif", "TIFF", "tags"]
categories = ["multimedia::images"]
description = "A look up table with the TIFF tag ID - name pairs , and associated methods to access them. Nightly rust required."
readme = "README.md"
repository = "https://github.com/Jeremiah-Griffin/TIFF_tags"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]